# qtwaw

./: .gitignore  CMakeLists.txt  LICENSE  README.md
languages/: qtwaw_en.ts  qtwaw_tr.ts
resources/: eu.scarpetta.QtWAW.desktop  loading.html  qtwaw.notifyrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  webenginepage.cpp  webenginepage.h
